# OpenGL_basics

./: CMakeLists.txt  main.cpp
src/: main.cpp
